--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -93,3 +93,19 @@ textarea.form-control {
 		background-color: darken($blue, 5%);
 	}
 }
+
+.notfound-block {
+	padding: 48px 32px;
+	text-align: center;
+	background-color: $grey;
+	h1 {
+		font-size: 20px;
+		line-height: 1.4;
+		@media #{$lg} {
+			font-size: 32px;
+		}
+	}
+	p {
+		margin: 0;
+	}
+}
