--- a/scss/partials/_comment.scss
+++ b/scss/partials/_comment.scss
@@ -73,6 +73,12 @@
 			background-color: $white;
 			padding: 16px;
 			border: 1px solid $grey;
+			> li {
+				margin: 0 0 16px;
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
 			.comment-content {
 				p {
 					font-size: 14px;
