add lazy and webp task

--- a/scss/partials/_override.scss
+++ b/scss/partials/_override.scss
@@ -1,3 +1,13 @@
 .table td, .table th {
 	border: 1px solid #dee2e6;
 }
+
+.b-lazy {
+	opacity:0;
+	transform: scale(1.2);
+	transition: all 500ms;
+}
+.b-loaded {
+	opacity:1;
+	transform: scale(1);
+}
