--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -10,7 +10,6 @@
 	img {
 		display: block;
 		margin: 0 auto 16px;
-
 		width: 64px;
 		height: 64px;
 		@media #{$md} {
@@ -59,6 +58,9 @@
 	li {
 		display: inline-block;
 		margin: 0 4px 0 0;
+		@media #{$lg} {
+			margin: 0 8px 0 0;
+		}
 		&:last-child {
 			margin-right: 0;
 		}
