--- a/scss/partials/_list.scss
+++ b/scss/partials/_list.scss
@@ -2,47 +2,45 @@
 	padding: 0;
 	margin: 0;
 	list-style: none;
-	@media #{$sm} {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-	}
 	.post-item {
 		width: 100%;
 		margin: 0 0 32px 0;
-		@media #{$sm} {
-			flex: 0 0 calc( 100% / 2 - 12px);
-			margin: 0 24px 32px 0;
-		}
-		&:nth-child(2n) {
-			margin-right: 0;
-		}
-		a {
-			display: block;
-		}
 		figure {
-			margin: 0;
-			a.cover-wrapper {
-				background-color: $black;
-				border-radius: 16px;
+			@media #{$sm} {
+				display: flex;
+				align-items: center;
+				flex-direction: row;
 			}
-			img {
+			.cover-wrapper {
+				width: 100%;
+				height: auto;
 				display: block;
-				margin: 0 0 16px;
-				border-radius: 16px;
+				margin: 0 0 16px 0;
+				@media #{$sm} {
+					max-width: 400px;
+					margin: 0 16px 0 0;
+				}
 				&:hover {
 					opacity: 0.9;
 				}
 			}
-			.post-title {
-				font-weight: normal;
-				font-size: 18px;
-				line-height: 1.5;
-				margin: 0 0 4px;
-			}
-			.post-desc {
-				font-size: 14px;
-				color: $black;
+			figcaption {
+				.post-title {
+					font-weight: bold;
+					line-height: 1.4;
+					margin: 0 0 4px;
+					font-size: 16px;
+					@media #{$sm} {
+						font-size: 20px;
+					}
+				}
+				.post-desc {
+					font-size: 14px;
+					color: $black;
+					@media #{$sm} {
+						font-size: 16px;
+					}
+				}
 			}
 		}
 	}	
