--- a/scss/partials/_list.scss
+++ b/scss/partials/_list.scss
@@ -12,13 +12,15 @@
 				flex-direction: row;
 			}
 			.cover-wrapper {
-				width: 100%;
-				height: auto;
 				display: block;
 				margin: 0 0 16px 0;
-				@media #{$sm} {
-					max-width: 400px;
-					margin: 0 16px 0 0;
+				img {
+					max-width: 100%;
+					height: auto;
+					@media #{$sm} {
+						max-width: 292px;
+						margin: 0 16px 0 0;
+					}
 				}
 				&:hover {
 					opacity: 0.9;
