--- a/scss/partials/_content.scss
+++ b/scss/partials/_content.scss
@@ -61,6 +61,10 @@
 		a {
 			font-size: 14px;
 			@extend .ci-text;
+			@media #{$sm} {
+				font-size: 16px;
+				font-weight: bold;
+			}
 		}
 	}
 }
