--- a/scss/partials/_list.scss
+++ b/scss/partials/_list.scss
@@ -5,6 +5,9 @@
 	.post-item {
 		width: 100%;
 		margin: 0 0 32px 0;
+		@media #{$sm} {
+			margin: 0 0 24px 0;
+		}
 		figure {
 			@media #{$sm} {
 				display: flex;
@@ -14,6 +17,9 @@
 			.cover-wrapper {
 				display: block;
 				margin: 0 0 16px 0;
+				@media #{$sm} {
+					margin: 0;
+				}
 				img {
 					max-width: 100%;
 					height: auto;
