--- a/scss/partials/_list.scss
+++ b/scss/partials/_list.scss
@@ -38,7 +38,7 @@
 					line-height: 1.4;
 					margin: 0 0 4px;
 					font-size: 16px;
-					word-break: break-word;
+					word-break: break-word !important;
 					@media #{$sm} {
 						font-size: 20px;
 					}
